--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -9,7 +9,7 @@ en:
     failure:
       # not_approved is custom!
       user:
-        not_approved: 'You have signed up successfully, but your account has not yet been approved by an administrator yet.'
+        not_approved: 'You have signed up successfully, but your account has not yet been approved by an administrator.'
       already_authenticated: "You are already signed in."
       inactive: "Your account is not activated yet."
       invalid: "Invalid email or password."
@@ -36,6 +36,8 @@ en:
       updated: "Your password was changed successfully. You are now signed in."
       updated_not_active: "Your password was changed successfully."
     registrations:
+      user:
+        not_approved: 'Your account has not yet been approved by an administrator.'
       destroyed: "Bye! Your account was successfully cancelled. We hope to see you again soon."
       signed_up: "Welcome! You have signed up successfully."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
